--- a/rebar.config
+++ b/rebar.config
@@ -5,5 +5,5 @@
 {deps,
  [
   {yokozuna, ".*",
-   {git, "git://github.com/basho/yokozuna.git", {branch, "v0.13.0"}}}
+   {git, "git://github.com/basho/yokozuna.git", {tag, "v0.13.0"}}}
  ]}.
