--- a/rebar.config
+++ b/rebar.config
@@ -5,5 +5,5 @@
 {deps,
  [
   {yokozuna, ".*",
-   {git, "git://github.com/basho/yokozuna.git", {tag, "2.0.0rc1"}}}
+   {git, "git://github.com/basho/yokozuna.git", {branch, "2.0"}}}
  ]}.
